fix: Icon spacing - do not rely on html spaces, utilize css

--- a/src/components/Link/Link.less
+++ b/src/components/Link/Link.less
@@ -5,3 +5,11 @@
     border-bottom-width: 1px;
   }
 }
+
+.a-link__icon-after-text svg {
+  margin-left: 0.25em;
+}
+
+.a-link__icon-before-text svg {
+  margin-right: 0.25em;
+}
